code refactored (#4)
* interface fixed, names cleared, updated docs
