# handlers.go
@@ -8,58 +8,66 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// getSources godoc
+// sourcesHandler godoc
 // @Summary      Sources
-// @Description  get sources list
+// @Description  returns sources
 // @Produce      json
 // @Accept       json
-// @Success      200  {array}  string  "getSources"
+// @Success      200  {array}  string  "sources"
 // @Router       /sources/ [get]
-func getSources(c *gin.Context) {
+func sourcesHandler(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"sources": sources.Sources()})
 }
 
-// getAlbums godoc
+// albumsHandler godoc
 // @Summary      Albums
-// @Description  get albums list
+// @Description  returns albums
 // @Produce      json
 // @Accept       json
 // @Param        sourceName  path     string  true  "source name"
-// @Success      200         {array}  string  "albums"
+// @Success      200         {array}  string
+// @Failure      400         {string}  string    "error"
+// @Failure      401         {string}  string    "error"
+// @Failure      403         {string}  string    "error"
+// @Failure      500         {string}  string    "error"
 // @Security     ApiKeyAuth
 // @Router       /albums/{sourceName}/ [get]
-func getAlbums(c *gin.Context) {
+func albumsHandler(c *gin.Context) {
 	api_key := c.Query("api_key")
 	source, err := sources.New(c.Param("sourceName"), api_key, &SimpleStorage{})
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	albums, err := source.GetAlbums()
+	albums, err := source.Albums()
 	if err != nil {
-		var e *sources.AuthError
+		var e *sources.AccessError
 		if errors.As(err, &e) {
 			c.JSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
 		} else {
-			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+			c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		}
 		return
 	}
 	c.JSON(http.StatusOK, gin.H{"albums": albums})
 }
 
-// downloadAlbum godoc
+// downloadAlbumHandler godoc
 // @Summary      download photos of album
-// @Description  download all photos of particular album
+// @Description  download all photos of particular album, returns destination of your photos
 // @Produce      json
 // @Accept       json
 // @Param        sourceName  path     string  true  "source name"
 // @Param        albumID     path     string  true  "album ID"
 // @Param        dir         query    string  true  "directory where photos will be stored"
 // @Success      200         {array}  string
+// @Failure      400         {string}  string    "error"
+// @Failure      401         {string}  string    "error"
+// @Failure      403         {string}  string    "error"
+// @Failure      500         {string}  string    "error"
 // @Router       /download-album/{albumID}/{sourceName}/ [get]
 // @Security     ApiKeyAuth
-func downloadAlbum(c *gin.Context) {
+func downloadAlbumHandler(c *gin.Context) {
 	api_key := c.Query("api_key")
 	source, err := sources.New(c.Param("sourceName"), api_key, &SimpleStorage{c.Query("dir")})
 	if err != nil {
@@ -68,28 +76,32 @@ func downloadAlbum(c *gin.Context) {
 	}
 	dir, err := source.DownloadAlbum(c.Param("albumID"))
 	if err != nil {
-		var e *sources.AuthError
+		var e *sources.AccessError
 		if errors.As(err, &e) {
 			c.JSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
 		} else {
-			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+			c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		}
 		return
 	}
-	c.JSON(http.StatusOK, gin.H{"error": "", "dir": dir})
+	c.JSON(http.StatusOK, gin.H{"dir": dir})
 }
 
-// downloadAllAlbums godoc
+// downloadAllAlbumsHandler godoc
 // @Summary      download photos of albums
-// @Description  download all photos of all albums
+// @Description  download all photos of all albums, returns destination of your photos
 // @Produce      json
 // @Accept       json
 // @Param        sourceName  path     string  true  "source name"
 // @Param        dir         query    string  true  "directory where photos will be stored"
 // @Success      200         {array}  string
+// @Failure      400         {string}  string    "error"
+// @Failure      401         {string}  string    "error"
+// @Failure      403         {string}  string    "error"
+// @Failure      500         {string}  string    "error"
 // @Router       /download-all-albums/{sourceName}/ [get]
 // @Security     ApiKeyAuth
-func downloadAllAlbums(c *gin.Context) {
+func downloadAllAlbumsHandler(c *gin.Context) {
 	api_key := c.Query("api_key")
 	source, err := sources.New(c.Param("sourceName"), api_key, &SimpleStorage{c.Query("dir")})
 	if err != nil {
@@ -98,13 +110,13 @@ func downloadAllAlbums(c *gin.Context) {
 	}
 	dir, err := source.DownloadAllAlbums()
 	if err != nil {
-		var e *sources.AuthError
+		var e *sources.AccessError
 		if errors.As(err, &e) {
 			c.JSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
 		} else {
-			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+			c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		}
 		return
 	}
-	c.JSON(http.StatusOK, gin.H{"error": "", "dir": dir})
+	c.JSON(http.StatusOK, gin.H{"dir": dir})
 }
